<resources>
    <string name="app_name">SafeNet</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="start_updates">Start Updates</string>
    <string name="title_activity_maps">Map</string>
    <string name="show_latest_location">Show Location on Map</string>
    <string name="location_log">Location Log</string>
    <string name="text_intro">Login to SafeNet to view or share locations</string>
    <string name="loading">loading...</string>
    <string name="disconnect">Disconnect</string>
    <string name="launch_activity">Open</string>
    <string name="remove_location_updates">Stop</string>
    <string name="stop_updates">Stop Location Updates</string>
    <string name="show_on_maps">Show on Maps</string>
    <string name="permission_rationale">Location permission is needed for this app to function</string>
    <string name="ok">OK</string>
    <string name="permission_denied_explanation">Permission for location is needed for the app to funciton</string>
    <string name="settings">Settings</string>
    <string name="share_my_location">Share My Location</string>
    <string name="phone_number">Phone Number</string>
    <string name="display_name">Display Name</string>
    <string name="safenet_user">Safenet User</string>
    <string name="my_locations">My Locations</string>
    <string name="title_activity_settings">Settings</string>

    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string name="pref_header_general">General</string>

    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>

    <string name="pref_title_display_name">Duration of Location Updates in seconds</string>
    <string name="pref_default_display_name">10</string>

    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Data &amp; sync</string>

    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string-array name="list_preference_entries">
        <item>Entry 1</item>
        <item>Entry 2</item>
        <item>Entry 3</item>
    </string-array>

    <string-array name="list_preference_entry_values">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>

    <string-array name="multi_select_list_preference_default_value" />

    <string name="pref_title_system_sync_settings">System sync settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_title_new_message_notifications">New message notifications</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>
</resources>
