<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/activity_start"
    tools:layout_editor_absoluteY="81dp"
    tools:layout_editor_absoluteX="0dp">

    <Button
        android:id="@+id/start_location_updates"
        android:layout_width="0dp"
        android:layout_height="48dp"
        android:text="@string/start_updates"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@+id/stop_location_updates"
        tools:layout_constraintBottom_creator="1"
        app:layout_constraintBottom_toBottomOf="@+id/stop_location_updates" />

    <Button
        android:id="@+id/stop_location_updates"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/stop_updates"
        app:layout_constraintLeft_toRightOf="@+id/start_location_updates"
        app:layout_constraintRight_toRightOf="parent"
        tools:layout_constraintTop_creator="1"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="130dp" />

    <Button
        android:id="@+id/show_on_map_button"
        android:layout_width="0dp"
        android:layout_height="48dp"
        android:text="@string/show_on_maps"
        tools:layout_editor_absoluteY="248dp"
        app:layout_constraintRight_toLeftOf="@+id/share_my_location"
        app:layout_constraintLeft_toLeftOf="parent" />

    <Button
        android:id="@+id/share_my_location"
        android:layout_width="0dp"
        android:layout_height="48dp"
        android:text="@string/share_my_location"
        tools:layout_editor_absoluteY="248dp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toRightOf="@+id/show_on_map_button" />
</android.support.constraint.ConstraintLayout>